# src/branding/branding.gql.schema.ts
@@ -1,0 +1,16 @@
+export const brandingGqlSchema = /* GraphQL */ `
+  type Query {
+    brandingOptions: [Option]
+  }
+  type Mutation {
+    updateBrandingOptions(input: [OptionInput]!): [Option]
+  }
+  type Option {
+    name: String!
+    value: String!
+  }
+  input OptionInput {
+    name: String!
+    value: String!
+  }
+`
